<resources>
    <string name="app_name">FirebaseCarsExplorer</string>
    <string name="login_fragment">LoginFragment</string>
    <string name="registation_fragment">Registration Fragment</string>
    <string name="login">Login</string>
    <string name="log_in">Zaloguj się</string>
    <string name="registration">Załóż konto</string>
    <string name="login_or_email">Podaj login lub adres E-mail</string>
    <string name="password">Podaj hasło</string>
    <string name="title_login">Zaloguj się</string>
    <string name="title_registration">Załóż konto</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="sign_up">Zarejestruj się</string>


    <string name="title_dashboard">     Dashboard</string>
    <string name="title_home">          Home</string>
    <string name="title_notifications"> Notifications</string>
    <string name="title_profile">       Profile</string>
</resources>